--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@
                     </a>
                 </div>
             </div>
+
+            <div class="card">
+                <a href="gone.html" style="text-decoration: none; color: inherit;">
+                    <img src="gone.png" alt="Gone" class="profile-pic">
+                    <div class="name">gone</div>
+                    <div class="tag">member</div>
+                </a>
+                <a href="https://t.me/behavioured" target="_blank" class="social-link">
+                    <img src="telegram.svg" alt="Telegram" class="social-icon telegram">
+                </a>
+            </div>
         </div>
     </div>
 
