--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
             </div>
 
             <div class="card">
-                <a href="surf.html" style="text-decoration: none; color: inherit;">
-                    <img src="surf.png" alt="Surf" class="profile-pic">
-                    <div class="name">surf</div>
+                <a href="casket.html" style="text-decoration: none; color: inherit;">
+                    <img src="casket.png" alt="Casket" class="profile-pic">
+                    <div class="name">casket</div>
                     <div class="tag">dev</div>
                 </a>
                 <div class="social-icons">
